test/bad/functions/args04.px

func f(x: Type): Void def
    return
